--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^4.0.2"
+    "typescript": "^4.1.0-dev.20200820"
   }
 }
